completed adding data

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-
-
 <!-- Tab links -->
 <div class="tab">
   <button class="tablinks" onclick="openPage(event, 'Summoner Stats')">Summoner Stats</button>
@@ -22,10 +20,12 @@
 </div>
 
 <!-- Tab content -->
-<div id="Summoner Stats" class="tabcontent">
-	<h1> Summoner Statistics and Information</h1>
-  <h1 id="summonerName"></h1>
-  <img id="profileIcon" src="" alt="Loading..." width="80" height="80" />
+<div id="Summoner Stats" class="tabcontent" style="display:block;">
+    <h1> Summoner Statistics and Information</h1>
+    <div id="Statsheader">
+    <img id="profileIcon" src="" alt="Loading..." width="80" height="80" />
+    <h1 id="summonerName"></h1>
+  </div>
   <div id='left_right_container'>
     <div id='left_container'>
       <ul id = "Solorankstats">
@@ -51,8 +51,13 @@
 
 <div id="Active Match" class="tabcontent">
   <h3>Active Match</h3>
-  <body id="activematchcontainer">
-  </body>
+  <div id="activematchcontainer">
+    <div id='banndeChamps'></div>
+    <div id='game'>
+      <div id='100'></div>
+      <div id='200'></div>
+    </div>
+  </div>
  
 </div>
 <div id="Twitch" class="tabcontent">
