working completed app

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'">
 <script src="https://embed.twitch.tv/embed/v1.js"></script>
-<title> NMPL Worksheet </title>
+<title> LOL simple Stat Tracker </title>
 <link rel="stylesheet" href="main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
